--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noteapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Shahjhan-2k19/noteapp",
+  "homepage": "http://Shahjhan-2k19.github.io/noteapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
